[gd_scene load_steps=12 format=2]

[ext_resource path="res://dialog/bbcode/rich_text_bbcode.gd" type="Script" id=1]
[ext_resource path="res://dialog/bbcode/Titillium-BoldItalic.otf" type="DynamicFontData" id=2]
[ext_resource path="res://dialog/bbcode/Titillium-RegularItalic.otf" type="DynamicFontData" id=3]
[ext_resource path="res://dialog/bbcode/Titillium-Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://dialog/bbcode/Titillium-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://font/font_list.tres" type="DynamicFont" id=6]
[ext_resource path="res://dialog/character/character.scn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Panel" type="Panel" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Label" type="RichTextLabel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 22.0
margin_right = -238.0
margin_bottom = -19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_fonts" ]

[node name="Button" type="Button" parent="." index="1"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -224.0
margin_top = -90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continue"
flat = false
align = 1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.04
one_shot = false
autostart = false

[node name="character" parent="." index="3" instance=ExtResource( 7 )]

margin_left = -200.0
margin_right = 1720.0

[connection signal="meta_clicked" from="Label" to="." method="_on_Label_meta_clicked"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


